--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div style="height: 300px; width: 500px"></div>
     <script type="module" src="JS/script.js"></script>
   </body>
 </html>
